# gai

./: .env.example  .gitignore  README.md  benchmark_simple.py  config.json  git-ai  git-commit-ai  git_ai.py  git_commit_ai.py  main.py  own-cli  pyproject.toml  run_benchmark.py
.github/: release.yml  tests.yml
.github/workflows/: publish.yml  tests.yml
src/gai/: cli.py  ollama_client.py  openai_client.py  provider.py  utils.py
src/gai.egg-info/: PKG-INFO  SOURCES.txt
src/gai_commit.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_cli.py  test_ollama_client.py  test_openai_provider.py
